Some minor tweaks

--- a/config/unbound.conf
+++ b/config/unbound.conf
@@ -349,7 +349,7 @@ server:
 
 	# if yes, Unbound doesn't insert authority/additional sections
 	# into response messages when those sections are not required.
-	# minimal-responses: no
+	minimal-responses: yes
 
 	# module configuration of the server. A string with identifiers
 	# separated by spaces. Syntax: "[dns64] [validator] iterator"
@@ -580,6 +580,10 @@ server:
 	# override the ratelimits for all domains below a domain name
 	# can give this multiple times, the name closest to the zone is used.
 	# ratelimit-below-domain: example 1000
+
+	hide-identity: yes
+	hide-version: yes
+
 
 # Python config section. To enable:
 # o use --with-pythonmodule to configure before compiling.
