--- a/config/unbound.conf
+++ b/config/unbound.conf
@@ -1,21 +1,21 @@
 server:
     # If no logfile is specified, syslog is used
     # logfile: "/var/log/unbound/unbound.log"
-    verbosity: 0
+    verbosity: {{VERBOSITY}}
 
-    port: 5333
-    do-ip4: yes
-    do-udp: yes
-    do-tcp: yes
+    port: {{PORT}}
+    do-ip4: {{DO_IPV4}}
+    do-udp: {{DO_UDP}}
+    do-tcp: {{DO_TCP}}
 
     # May be set to yes if you have IPv6 connectivity
-    do-ip6: yes
+    do-ip6: {{DO_IPV6}}
 
     # Use this only when you downloaded the list of primary root servers!
     root-hints: "/etc/unbound/root.hints"
    
     # Respond to DNS requests on all interfaces
-    interface: 0.0.0.0
+    interface: {{INTERFACE}}
 
     # IPs authorized to access the DNS Server
     access-control: 192.168.1.0/24 allow
@@ -26,11 +26,11 @@ server:
     access-control: 0.0.0.0/0 deny
     
     # Hide DNS Server info
-    hide-identity: yes
-    hide-version: yes
+    hide-identity: {{HIDE_IDENTITY}}
+    hide-version: {{HIDE_VERSION}}
 
     # Trust glue only if it is within the servers authority
-    harden-glue: yes
+    harden-glue: {{HARDEN_GLUE}}
 
     # Require DNSSEC data for trust-anchored zones, if such data is absent, the zone becomes BOGUS
     harden-dnssec-stripped: yes
@@ -41,7 +41,7 @@ server:
 
     # Reduce EDNS reassembly buffer size.
     # Suggested by the unbound man page to reduce fragmentation reassembly problems
-    edns-buffer-size: 1472
+    edns-buffer-size: {{EDNS_BUFFER_SIZE}}
 
     # Perform prefetching of close to expired message cache entries
     # This only applies to domains that have been frequently queried
@@ -49,8 +49,8 @@ server:
     
     # Time To Live (in seconds) for DNS cache. Set cache-min-ttl to 0 remove caching (default).
     # Max cache default is 86400 (1 day).
-    cache-min-ttl: 3600
-    cache-max-ttl: 86400
+    cache-min-ttl: {{CACHE_MIN_TTL}}
+    cache-max-ttl: {{CACHE_MAX_TTL}}
 
     # If enabled, attempt to serve old responses from cache without waiting for the actual
     # resolution to finish.
@@ -66,7 +66,7 @@ server:
     rrset-cache-size: 256m
 
     # One thread should be sufficient, can be increased on beefy machines. In reality for most users running on small networks or on a single machine it should be unnecessary to seek performance enhancement by increasing num-threads above 1.
-    num-threads: 1
+    num-threads: {{NUM_THREADS}}
 
     # Ensure kernel buffer is large enough to not lose messages in traffic spikes
     so-rcvbuf: 1m
