--- a/config/unbound.conf
+++ b/config/unbound.conf
@@ -54,8 +54,8 @@ server:
 
     # If enabled, attempt to serve old responses from cache without waiting for the actual
     # resolution to finish.
-    serve-expired: yes
-    serve-expired-ttl: 3600
+    # serve-expired: yes
+    # serve-expired-ttl: 3600
 
     # Use about 2x more for rrset cache, total memory use is about 2-2.5x
     # total cache size. Current setting is way overkill for a small network.
